--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -21,6 +21,10 @@
   <script src="vendor/js/bootstrap.min.js"></script>
   <script src="vendor/js/holder.js"></script>
   <script src="../../dist/tequila.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-client.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-navbar.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>
   <script src="app.js"></script>
   <!--<script src="interface.js"></script>-->
   <!--<script src="interface-navbar.js"></script>-->
