Sample App brand working

--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -6,7 +6,7 @@
   <link href="vendor/css/bootstrap.css" rel="stylesheet">
   <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
-  <link href="interface.css" rel="stylesheet">
+  <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet">
 </head>
 <body>
 <div class="container" id="loadingPanel">
