--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -85,6 +85,7 @@
   <script type="text/javascript" src="integration/test-procedure-integration.js"></script>
   <script type="text/javascript" src="integration/test-interface-integration.js"></script>
   <script type="text/javascript" src="integration/test-application-integration.js"></script>
+  <script type="text/javascript" src="integration/test-request-dispatch-integration.js"></script>
 
   <!--The design spec-->
 
