--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -20,6 +20,7 @@
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
   <script src="vendor/js/bootstrap.min.js"></script>
   <script src="vendor/js/holder.js"></script>
+  <script src="vendor/js/markdown.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-client.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
