--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>tequila on github</title>
+  <script>window.location = "test-spec/test-runner.html";</script>
 </head>
 <body>
+redirecting...
 sup foo
 </body>
 </html>
