--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>tequila on github</title>
-  <script>window.location = "test-spec/test-runner.html";</script>
+  <script type="text/javascript">
+    window.location = "test-spec/test-runner.html";
+  </script>
 </head>
 <body>
 redirecting...
