--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -26,6 +26,7 @@
   <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-navbar.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-stub-panel.js"></script>
   <script src="app.js"></script>
   <!--<script src="interface.js"></script>-->
   <!--<script src="interface-navbar.js"></script>-->
