--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -27,12 +27,8 @@
   <script src="../../lib/interfaces/bootstrap3-panels-interface-navbar.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-stub-panel.js"></script>
+  <script src="../../lib/interfaces/bootstrap3-panels-interface-presentation-panel.js"></script>
   <script src="app.js"></script>
-  <!--<script src="interface.js"></script>-->
-  <!--<script src="interface-navbar.js"></script>-->
-  <!--<script src="interface-panel.js"></script>-->
-  <!--<script src="interface-panel-home.js"></script>-->
-  <!--<script src="panel-types/panel-type-options.js"></script>-->
 </div>
 </body>
 </html>
