--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>bootstrap3-panels-interface-sample</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="vendor/css/bootstrap.css" rel="stylesheet">
-  <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet">-->
+  <link href="vendor/css/bootstrap.css" rel="stylesheet" media="screen">
+  <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet media="screen"">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
-  <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet">
+  <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="container" id="loadingPanel">
