--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="../lib/stores/mongo-store.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
   <script type="text/javascript" src="../lib/stores/local-store.js"></script>
+  <script type="text/javascript" src="../lib/stores/local-store-client.js"></script>
   <script type="text/javascript" src="../lib/stores/redis-store.js"></script>
 
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-panels-interface.js"></script>
