bug 2 fix then do next session function

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -31,6 +31,7 @@
   <script type="text/javascript" src="../lib/models/application-model.js"></script>
   <script type="text/javascript" src="../lib/models/log-model.js"></script>
   <script type="text/javascript" src="../lib/models/presentation-model.js"></script>
+  <script type="text/javascript" src="../lib/models/session-model.js"></script>
   <script type="text/javascript" src="../lib/models/user-model.js"></script>
   <script type="text/javascript" src="../lib/models/workspace-model.js"></script>
 
@@ -66,6 +67,7 @@
   <script type="text/javascript" src="../lib/models/log-test.js"></script>
   <script type="text/javascript" src="../lib/models/presentation-test.js"></script>
   <script type="text/javascript" src="../lib/models/user-test.js"></script>
+  <script type="text/javascript" src="../lib/models/session-test.js"></script>
   <script type="text/javascript" src="../lib/models/workspace-test.js"></script>
 
   <script type="text/javascript" src="../lib/stores/memory-test.js"></script>
@@ -81,6 +83,7 @@
   <!--Functional and Integration Tests-->
 
   <script type="text/javascript" src="integration/test-list-integration.js"></script>
+  <script type="text/javascript" src="integration/test-session-integration.js"></script>
   <script type="text/javascript" src="integration/test-store-integration.js"></script>
   <script type="text/javascript" src="integration/test-command-integration.js"></script>
   <script type="text/javascript" src="integration/test-procedure-integration.js"></script>
