json-file added

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -37,6 +37,7 @@
 
   <script type="text/javascript" src="../lib/stores/memory-store.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-store.js"></script>
+  <script type="text/javascript" src="../lib/stores/json-file-store.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
   <script type="text/javascript" src="../lib/stores/local-store.js"></script>
   <script type="text/javascript" src="../lib/stores/local-store-client.js"></script>
@@ -72,6 +73,7 @@
 
   <script type="text/javascript" src="../lib/stores/memory-test.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-test.js"></script>
+  <script type="text/javascript" src="../lib/stores/json-file-test.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-test.js"></script>
   <script type="text/javascript" src="../lib/stores/local-test.js"></script>
   <script type="text/javascript" src="../lib/stores/redis-test.js"></script>
