--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -9,6 +9,22 @@
   <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet" media="screen">
 </head>
 <body>
+
+<!--<div class="form-group">-->
+  <!--<label class="col-sm-3 control-label">Password</label>-->
+  <!--<div class="col-sm-4">-->
+    <!--<input class="form-control" type="text" maxlength="20">-->
+  <!--</div>-->
+<!--</div>-->
+
+<!--<div id="groupGroup" class="form-group">-->
+  <!--<label for="groupName" class="col-lg-2 control-label">Name</label>-->
+  <!--<div class="col-lg-5">-->
+    <!--<input id="groupName" type="text" class="form-control" placeholder="group name" required>-->
+    <!--<span id="groupNameHelp" style="display: none;" class="help-block">Name is required.</span>-->
+  <!--</div>-->
+<!--</div>-->
+
 <div class="container" id="loadingPanel">
   <br>
   <br>
