--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -7,6 +7,7 @@
   <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet media="screen"">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
   <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="vendor/css/switchery.css" />
 </head>
 <body>
 
@@ -37,6 +38,7 @@
   <script src="vendor/js/bootstrap.min.js"></script>
   <script src="vendor/js/holder.js"></script>
   <script src="vendor/js/markdown.js"></script>
+  <script src="vendor/js/switchery.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-client.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
