--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -7,38 +7,35 @@
   <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet media="screen"">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
   <link href="../../dist/bootstrap3-panels-interface.css" rel="stylesheet" media="screen">
-  <link rel="stylesheet" href="vendor/css/switchery.css" />
+  <link rel="stylesheet" href="vendor/css/switchery.css"/>
+  <link rel="stylesheet" href="vendor/css/datepicker3.css"/>
 </head>
 <body>
-
-<!--<div class="form-group">-->
-  <!--<label class="col-sm-3 control-label">Password</label>-->
-  <!--<div class="col-sm-4">-->
-    <!--<input class="form-control" type="text" maxlength="20">-->
-  <!--</div>-->
-<!--</div>-->
-
-<!--<div id="groupGroup" class="form-group">-->
-  <!--<label for="groupName" class="col-lg-2 control-label">Name</label>-->
-  <!--<div class="col-lg-5">-->
-    <!--<input id="groupName" type="text" class="form-control" placeholder="group name" required>-->
-    <!--<span id="groupNameHelp" style="display: none;" class="help-block">Name is required.</span>-->
-  <!--</div>-->
-<!--</div>-->
-
 <div class="container" id="loadingPanel">
   <br>
   <br>
+
   <h1 style="display: block; text-align: center;">Loading...</h1>
   <br>
   <img style="display: block; margin-left: auto; margin-right: auto;" src="img/ajax-loader.gif">
 </div>
+
+<!--<div class="row form-horizontal">-->
+  <!--<div class="span5 col-md-5">-->
+    <!--<div class="input-group date">-->
+      <!--<input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+
 <div id="scripts">
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
   <script src="vendor/js/bootstrap.min.js"></script>
   <script src="vendor/js/holder.js"></script>
   <script src="vendor/js/markdown.js"></script>
   <script src="vendor/js/switchery.js"></script>
+  <script src="vendor/js/bootstrap-datepicker.min.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-client.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
@@ -47,6 +44,13 @@
   <script src="../../lib/interfaces/bootstrap3-panels-interface-stub-panel.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-presentation-panel.js"></script>
   <script src="app.js"></script>
+  <!--<script>-->
+    <!--$(document).ready(function () {-->
+      <!--$('.input-group.date').datepicker({-->
+        <!--autoclose: true-->
+      <!--});-->
+    <!--});-->
+  <!--</script>-->
 </div>
 </body>
 </html>
