--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>bootstrap3-panels-interface-sample</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <link href="vendor/css/bootstrap.css" rel="stylesheet" media="screen">
   <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet media="screen"">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
