--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -37,6 +37,7 @@
   <script src="vendor/js/markdown.js"></script>
   <script src="vendor/js/switchery.js"></script>
   <script src="vendor/js/bootstrap-datepicker.min.js"></script>
+  <script src="vendor/js/bowser.min.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-client.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>
