--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -144,13 +144,13 @@
     <div class="toolbar tabbar">
       <div class="toolbar-inner">
         <!-- Toolbar links -->
-        <a href="#tab-1" class="tab-link active"><i class="fa fa-home"></i></a>
-        <a href="#tab-2" class="tab-link"><i class="fa fa-th"></i></a>
-        <a href="#tab-3" class="tab-link"><i class="fa fa-search"></i></a>
-        <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark"></i></a>
-        <a href="#tab-5" class="tab-link"><i class="fa fa-book"></i></a>
-        <a href="#tab-6" class="tab-link"><i class="fa fa-info-circle"></i></a>
-        <a href="#tab-7" class="tab-link"><i class="fa fa-ellipsis-horizontal"></i></a>
+        <a href="#tab-1" class="tab-link active"><i class="fa fa-home fa-lg"></i></a>
+        <a href="#tab-2" class="tab-link"><i class="fa fa-th fa-lg"></i></a>
+        <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i></a>
+        <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i></a>
+        <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i></a>
+        <a href="#tab-6" class="tab-link"><i class="fa fa-info-circle fa-lg"></i></a>
+        <a href="#tab-7" class="tab-link"><i class="fa fa-ellipsis-horizontal fa-lg"></i></a>
       </div>
     </div>
 
