--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -149,7 +149,7 @@
         <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i></a>
         <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i></a>
         <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i></a>
-        <a href="#tab-6" class="tab-link"><i class="fa fa-info-circle fa-lg"></i></a>
+        <!--<a href="#tab-6" class="tab-link"><i class="fa fa-info-circle fa-lg"></i></a>-->
         <a href="#tab-7" class="tab-link"><i class="fa fa-ellipsis-horizontal fa-lg"></i></a>
       </div>
     </div>
