--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -90,9 +90,26 @@
               </div>
             </div>
             <div id="tab-2" class="tab">
-              <div class="content-block-title">APPLICATION</div>
               <div class="content-block">
-                <p>Menu icons for app here</p>
+
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                </div>
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                </div>
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                </div>
+
+
+
               </div>
             </div>
             <div id="tab-3" class="tab">
