--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -107,6 +107,11 @@
                   <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
                   <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
                 </div>
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                </div>
 
 
 
