--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -93,8 +93,8 @@
               <div class="content-block">
 
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-calendar fa-2x"></i><br>Button Here</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON sd sdf sdf sdf sdf sdf sdfsd f </a></div>
                   <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
                 </div>
                 <div class="row">
