--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -83,38 +83,35 @@
         <!-- Scrollable page content -->
         <div class="page-content">
           <div class="tabs">
-            <div id="tab-1" class="tab active">
+            <div id="tab-1" class="tab">
               <div class="content-block-title">HOME</div>
               <div class="content-block">
                 <p>Active workspace shown here</p>
               </div>
             </div>
-            <div id="tab-2" class="tab">
+            <div id="tab-2" class="tab active">
               <div class="content-block">
 
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-calendar fa-2x"></i><br>Button Here</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON sd sdf sdf sdf sdf sdf sdfsd f </a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Bacon Toast & Coffee</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall">BUTTON</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                 </div>
-
-
-
               </div>
             </div>
             <div id="tab-3" class="tab">
@@ -166,8 +163,8 @@
     <div class="toolbar tabbar">
       <div class="toolbar-inner">
         <!-- Toolbar links -->
-        <a href="#tab-1" class="tab-link active"><i class="fa fa-home fa-lg"></i></a>
-        <a href="#tab-2" class="tab-link"><i class="fa fa-th fa-lg"></i></a>
+        <a href="#tab-1" class="tab-link"><i class="fa fa-home fa-lg"></i></a>
+        <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i></a>
         <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i></a>
         <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i></a>
         <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i></a>
