--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -93,7 +93,7 @@
               <div class="content-block">
 
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                   <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
                   <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Bacon Toast & Coffee</a></div>
                 </div>
